--- a/01-newbie/profile-card-component/index.html
+++ b/01-newbie/profile-card-component/index.html
@@ -56,7 +56,9 @@
     <footer>
       <div class="attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ" target="_blank"
+        <a
+          href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ"
+          target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="https://github.com/tatumroaquin">Tatum Roaquin</a>.
       </div>
